--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <img src="https://mycom.uz/image/cache/catalog/1stPlayerR3-A-500x500.jpg" class="Foto_1"/>
     <h1 class="technik">Hyper R3-A</h1>
     <p class="opo">Цена:</p>
-    <p class="opos">900$</p>
-    <a class="oposol" href="">В Корзину</a>
+    <p class="opos">800$</p>
+    <a class="oposol" href="#tellefon_nummer_text">В Корзину</a>
     <div class="about">
     <p class="text_about">Про этот блок:</p>
     <ul class="text_about_1">
@@ -31,7 +31,9 @@
     </ul>  
     </div>    
     <div class="tellefon_nummer">
-      <p class="tellefon_nummer_text">Наш номер телефона куратора и оформлятеля заказов:49-376-56-32</p>
+      <p id="tellefon_nummer_text">Наш номер телефона куратора и оформлятеля заказов:49-376-56-32</p>
     </div>
   </main>
 </body>
+
+</html>
